<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="APP_name">Tracks</string>
  
  <string name="SETTINGS_password">Password</string>
  <string name="SETTINGS_username">Username</string>
  <string name="SETTINGS_server">Server Address</string>
  <string name="SETTINGS_server_summary">Hostname or IP Address</string>
  <string name="SETTINGS_port">Server Port</string>
  <string name="SETTINGS_port_summary">The port used for Tracks on the server</string>
  <string name="SETTINGS_https">Use HTTPS?</string>
  <string name="SETTINGS_https_summary_off">Will use insecure HTTP connections</string>
  <string name="SETTINGS_https_summary_on">Will use secure HTTPS connections</string>
  <string name="SETTINGS_badcert">Ignore Certificates Errors?</string>
  <string name="SETTINGS_badcert_summary_off">Will fail on HTTPS certificate errors</string>
  <string name="SETTINGS_badcert_summary_on">Will ignore HTTPS certificate errors</string>
  <string name="SETTINGS_defer">Show Defer Buttons</string>
  <string name="SETTINGS_defer_summary_off">Defer buttons will be hidden</string>
  <string name="SETTINGS_defer_summary_on">Defer buttons will be shown</string>

  <string name="ERR_badprefs">Please check your settings.</string>
  <string name="ERR_parse">Parse Error</string>
  <string name="ERR_fetch">Fetch Error</string>
  <string name="ERR_save_general">Failed to save task. Check your connection and try again.</string>
  <string name="ERR_save_baddata">Description must be provided.</string>
  <string name="ERR_savecontext_baddata">Name must be provided.</string>
  <string name="ERR_savecontext_general">Failed to save context. Check your connection and try again.</string>
  <string name="ERR_saveproject_baddata">Name must be provided.</string>
  <string name="ERR_saveproject_general">Failed to save project. Check your connection and try again.</string>

  <string name="MSG_fetching">Fetching Data</string>  
  <string name="MSG_parsing">Parsing Data</string>
  <string name="MSG_saving">Saving</string>
  <string name="MSG_welcome">Welcome to Tracks for Android!  Please fill in your server and account settings, then press the back button to see your task list.  You can get back to this settings screen later from the menu.</string>
  
  <string name="MENU_settings">Settings</string>
  <string name="MENU_refresh">Refresh</string>
  <string name="MENU_add">Add Task</string>
  <string name="MENU_addcontext">Add Context</string>
  <string name="MENU_addproject">Add Project</string>
  
  <string name="delete_task">Delete Action</string>
  <string name="edit_task">Edit Action</string>
  <string name="done_task">Complete Action</string>
  
  <string name="TEA_description">Description</string>
  <string name="TEA_notes">Notes</string>
  <string name="TEA_project">Project</string>
  <string name="TEA_context">Context</string>
  <string name="TEA_due_date">Due</string>
  <string name="TEA_show_from">Show From</string>
  <string name="TEA_save">Save</string>
  <string name="TEA_cancel">Cancel</string>

  <string name="CEA_name">Name</string>
  <string name="CEA_hide">Hide context?</string>
  <string name="CEA_save">Save</string>
  <string name="CEA_cancel">Cancel</string>

  <string name="PEA_name">Name</string>
  <string name="PEA_description">Description</string>
  <string name="PEA_save">Save</string>
  <string name="PEA_cancel">Cancel</string>
</resources>
