<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="Server">
	<EditTextPreference android:defaultValue=""
						android:singleLine="true"
						android:inputType="textUri"
						android:title="@string/SETTINGS_server"
						android:summary="@string/SETTINGS_server_summary"
						android:key="server" />
	<EditTextPreference android:defaultValue=""
						android:singleLine="true"
						android:inputType="textNoSuggestions"
						android:title="@string/SETTINGS_username"
						android:key="username" />
	<EditTextPreference android:defaultValue=""
						android:singleLine="true"
						android:title="@string/SETTINGS_password"
						android:password="true"
						android:key="password" />
  </PreferenceCategory>
</PreferenceScreen>
