<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

  <LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical">

	<TextView android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/PEA_name" />
	<EditText android:id="@+id/PEA_name"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text=""
			  android:autoText="true"
			  android:capitalize="sentences" 
			  android:singleLine="true" />

	<TextView android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/PEA_description" />
	<EditText android:id="@+id/PEA_description"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:lines="3"
			  android:gravity="top"
			  android:text=""
			  android:autoText="true"
			  android:capitalize="sentences" />

	<TableLayout android:layout_width="fill_parent"
				 android:layout_height="wrap_content"
				 android:orientation="horizontal"
				 android:stretchColumns="*">

	  <TableRow>
		<Button android:id="@+id/PEA_save"
				android:layout_width="0dip"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/PEA_save" />
		
		<Button android:id="@+id/PEA_cancel"
				android:layout_width="0dip"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/PEA_cancel" />
	  </TableRow>
	</TableLayout>

  </LinearLayout>
</ScrollView>
